(fix): label spacing in form (fix): font weights

--- a/src/app/modules/onboarding-v2/page/onboarding.component.scss
+++ b/src/app/modules/onboarding-v2/page/onboarding.component.scss
@@ -241,19 +241,22 @@ m-onboarding {
           display: flex;
           flex-direction: column;
 
-          &.m-onboardingControl__dateOfBirth {
-            padding-top: 15px;
+          &:not(:first-child) {
+            padding-top: 20px;
           }
 
           .m-onboardingControl__label {
             position: relative;
+
             & > label {
+              display: inline-block;
               font-size: 14px;
               line-height: 19px;
-              margin-bottom: 8px;
+              padding-bottom: 9.5px;
             }
 
             & > span {
+              font-weight: bold;
               font-style: italic;
               position: absolute;
               right: 0;
@@ -357,9 +360,15 @@ m-onboarding {
         m-tooltip {
           margin-left: 10px;
 
-          .m-tooltip--anchor {
+          .m-tooltip--anchored {
             font-weight: bold;
-            color: rgba(0, 0, 0, 0.5);
+            font-size: 15px;
+            line-height: 18px;
+            letter-spacing: 0;
+
+            @include m-theme() {
+              color: themed($m-grey-700);
+            }
           }
 
           .m-tooltip--bubble {
